<resources>

    <string name="app_name">RPG Combat Assistant</string>
    <string name="loading">Inicializando</string>
    <string name="menu_settings">Preferencias</string>

    <string name="mainTitle">RPG Combat Assistant</string>
    <!-- Common elements -->
    <string name="errorMustBeANumber">Debe ser numérico</string>
    <string name="errorMandatory">Obligatorio</string>
    <string name="fumble">¡Pifia!</string>
    <string name="noEffect">Sin efecto</string>

    <!-- Splash screen Activity -->
    <string name="splash_main">RPG Combat Assistant</string>
    <string name="splash_progress_reading">Leyendo ficheros</string>
    <string name="splash_progress_reading_zip">Leyendo fichero zip</string>
    <string name="splash_progress_unzip">Descomprimiendo fichero</string>
    <string name="splash_progress_unzipped">Fichero descomprimido</string>
    <string name="splash_progress_critical">Leyendo críticos</string>
    <string name="splash_progress_critical_table">Leyendo tablas de críticos</string>
    <string name="splash_progress_attack">Leyendo ataques</string>
    <string name="splash_progress_attack_table">Leyendo tablas de ataque</string>
    <string name="splash_progress_moving_maneuver">Leyendo MM</string>

    <!-- RPGCharacter List Activity -->
    <string name="characterList_playerCharactersGroupHeader">Personajes jugadores</string>
    <string name="characterList_nonPlayerCharactersGroupHeader">Personajes no-jugadores</string>

    <!-- RPGCharacter Activity -->
    <string name="character_title">Personaje</string>
    <string name="character_name">%1$s (%2$s)</string>
    <string name="character_name_pnj">%1$s (PNJ)</string>
    <string name="character_hit_points">%1$d/%2$d</string>
    <string name="character_playerName">Jugador</string>
    <string name="menu_character_edit">Editar</string>
    <string name="menu_character_delete">Eliminar</string>
    <string name="character_deleteDialog_title">Eliminar personaje</string>
    <string name="character_deleteDialog_message">¿Estás seguro de querer eliminar este personaje?</string>
    <string name="character_deleteDialog_ok">Sí, elimínalo</string>
    <string name="character_deleteDialog_cancel">No</string>
    
    <!-- RPGCharacter Edit Activity -->
    <string name="characterEdit_title">Edición de personaje</string>
    <string name="characterEdit_name">Nombre</string>
    <string name="characterEdit_nameHint">Personaje</string>
    <string name="characterEdit_playerName">PJ</string>
    <string name="characterEdit_playerPnj">PNJ</string>
    <string name="characterEdit_playerNameHint">Jugador</string>
    <string name="characterEdit_maxHitPoints">PV (total)</string>
    <string name="characterEdit_maxHitPointsHint">PVT</string>
    <string name="characterEdit_hitPoints">PV (actual)</string>
    <string name="characterEdit_hitPointsHint">PV</string>
    <string name="characterEdit_armorType">Armadura</string>
    <string name="characterEdit_cancelButton">Cancelar</string>
    <string name="characterEdit_saveButton">Guardar</string>
    <string name="characterEdit_addAttackButton">Añadir</string>

    <!-- Attack Activity -->
    <string name="attack_title">Ataque</string>
    <string name="attack_name">Nombre</string>
    <string name="attack_attackType">Tipo</string>
    <string name="attack_extra">Extra</string>
    <string name="attack_defender">Defensor</string>
    <string name="attack_defenderArmorType">Armadura</string>
    <string name="attack_roll">Tirada</string>
    <string name="attack_cancelButton">Cancelar</string>
    <string name="attack_goButton">Atacar</string>
    <string name="attack_applyResultButton">Aplicar</string>
    <string name="attack_critical">Crítico de %1$s nivel %2$s</string>
    <string name="attack_goToCriticalButton">Lanzar crítico</string>
    <string name="menu_attack_edit">Editar</string>
    <string name="menu_attack_delete">Eliminar</string>
    <string name="attack_deleteDialog_title">Eliminar ataque</string>
    <string name="attack_deleteDialog_message">¿Estás seguro de querer eliminar este ataque?</string>
    <string name="attack_deleteDialog_ok">Sí, elimínalo</string>
    <string name="attack_deleteDialog_cancel">No</string>
    
    <!-- Attack Edit Activity -->
    <string name="attackEdit_title">Edición de ataque</string>
    <string name="attackEdit_name">Nombre</string>
    <string name="attackEdit_attackType">Tipo</string>
    <string name="attackEdit_bonus">Bonus</string>
    <string name="attackEdit_cancelButton">Cancelar</string>
    <string name="attackEdit_saveButton">Aplicar cambios</string>
    
    <!-- Critical Activity -->
    <string name="critical_title">Crítico</string>
    <string name="critical_type">Tipo</string>
    <string name="critical_level">Nivel</string>
    <string name="critical_roll">Tirada</string>
    <string name="critical_cancelButton">Cancelar</string>
    <string name="critical_goButton">Calcular</string>

    <!-- Armors -->
    <string name="armor_merp_1">No Armor</string>
    <string name="armor_merp_5">Soft Leather</string>
    <string name="armor_merp_10">Rigid Leather</string>
    <string name="armor_merp_15">Cain Mail</string>
    <string name="armor_merp_20">Plate</string>
    <string name="armor_rm_1">Skin</string>
    <string name="armor_rm_2">Robes</string>
    <string name="armor_rm_3">Light Hide</string>
    <string name="armor_rm_4">Heavy Hide</string>
    <string name="armor_rm_5">Leather Jerkin</string>
    <string name="armor_rm_6">Leather Coat</string>
    <string name="armor_rm_7">Reinforced Leather Coat</string>
    <string name="armor_rm_8">Reinforced Fill-Length Leather Coat</string>
    <string name="armor_rm_9">Leather Breastplate</string>
    <string name="armor_rm_10">Leather Breastplate and Greaves</string>
    <string name="armor_rm_11">Halsf-Hide Plate</string>
    <string name="armor_rm_12">Fill-Hide Plate</string>
    <string name="armor_rm_13">Chain Shirt</string>
    <string name="armor_rm_14">Chain Shirt and Greaves</string>
    <string name="armor_rm_15">Full Chain</string>
    <string name="armor_rm_16">Chain Hauberk</string>
    <string name="armor_rm_17">Metal Breastplate</string>
    <string name="armor_rm_18">Metal Breastplate and Greaves</string>
    <string name="armor_rm_19">Half Plate</string>
    <string name="armor_rm_20">Full Plate</string>

    <string name="maneuver_diff_routine">Rutina</string>
    <string name="maneuver_diff_easy">Fácil</string>
    <string name="maneuver_diff_light">Escasa dificultad</string>
    <string name="maneuver_diff_medium">Dificultad media</string>
    <string name="maneuver_diff_very_hard">Difícil</string>
    <string name="maneuver_diff_extremely_hard">Muy difícil</string>
    <string name="maneuver_diff_sheer_hard">Extremadamente difícil</string>
    <string name="maneuver_diff_folly">Locura completa</string>
    <string name="maneuver_diff_absurd">Absurdo</string>
    <string name="moving_difficultyLabel">Dificultad</string>
    <string name="moving_rollHint">Tirada</string>
    <string name="moving_bonusHint">Bonus</string>


    <string name="characterEdit_humanPlayer">¿Jugador humano?</string>
    <string name="pref_system_dialog">Seleccione un sistema de juego</string>
    <string name="pref_system_title">Sistema actual</string>
    <string name="pref_system_summary">Elije el sistema de juego</string>
    <string name="pref_system_manage_title">Gestionar sistemas</string>
    <string name="pref_system_manage_summary">Pulse para editar los sistemas</string>
</resources>