<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/character_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            android:layout_margin="10dp"
            android:inputType="textPersonName|textNoSuggestions"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:id="@+id/characterEdit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/characterEdit_nameHint"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/character_icon"/>

        <LinearLayout
            android:id="@+id/charactedEdit_playerNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/characterEdit_name"
            android:layout_toRightOf="@+id/character_icon"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/characterEdit_playerName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/characterEdit_playerNameHint"
                android:inputType="textPersonName|textNoSuggestions"/>

            <CheckBox
                android:id="@+id/characterEdit_playerPnj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/charactedEdit_hitPointsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/charactedEdit_playerNameLayout"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/characterEdit_hitPoints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/characterEdit_hitPointsHint"
                android:gravity="center_horizontal"
                android:inputType="number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="/"/>

            <EditText
                android:id="@+id/characterEdit_maxHitPoints"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/characterEdit_maxHitPointsHint"
                android:gravity="center_horizontal"
                android:inputType="number"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/characterEdit_armorType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_below="@+id/charactedEdit_hitPointsLayout"/>
    </RelativeLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/characterEdit_cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/characterEdit_cancelButton"/>
        <Button
            android:id="@+id/characterEdit_addAttackButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/characterEdit_addAttackButton" />
        <Button
            android:id="@+id/characterEdit_saveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/characterEdit_saveButton" />

    </LinearLayout>
</LinearLayout>