<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/attackEdit_nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/attackEdit_name" />

    <EditText
        android:id="@+id/attackEdit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/attackEdit_nameLabel"
        android:layout_toRightOf="@+id/attackEdit_nameLabel"
        android:inputType="textPersonName|textNoSuggestions" />

    <TextView
        android:id="@+id/attackEdit_attackTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/attackEdit_nameLabel"
        android:layout_below="@+id/attackEdit_nameLabel"
        android:layout_marginTop="40dp"
        android:text="@string/attackEdit_attackType" />

    <Spinner
        android:id="@+id/attackEdit_attackType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attackEdit_attackTypeLabel"
        android:layout_alignLeft="@+id/attackEdit_name"
        android:layout_alignRight="@+id/attackEdit_name"
        android:inputType="textPersonName"
    />

    
    <Button
        android:id="@+id/attackEdit_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/attackEdit_nameLabel"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="165dp"
        android:text="@string/attackEdit_cancelButton" />

    <Button
        android:id="@+id/attackEdit_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/attackEdit_cancelButton"
        android:layout_alignBottom="@+id/attackEdit_cancelButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="31dp"
        android:text="@string/attackEdit_saveButton" />
    
</RelativeLayout>
