<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/buttons"
                android:id="@+id/attack_scrollView">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/attack_attackerLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Attacker"/>

            <Spinner
                    android:id="@+id/attack_attacker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Spinner
                    android:id="@+id/attack_attackerAttack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/attack_bonusSeekLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"/>

            <SeekBar
                    android:id="@+id/attack_bonusSeek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"/>

            <EditText
                    android:id="@+id/attack_roll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="numberSigned"
                    android:hint="@string/attack_roll"/>

            <EditText
                    android:id="@+id/attack_extra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="numberSigned"
                    android:hint="@string/attack_extra"/>

            <TextView
                    android:id="@+id/attack_defenderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Defender"/>

            <Spinner
                    android:id="@+id/attack_defender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Spinner
                    android:id="@+id/attack_defenderArmor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

    </ScrollView>

    <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">


        <Button
                android:id="@+id/attack_cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attack_cancelButton"/>

        <Button
                android:id="@+id/attack_goButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/attack_goButton"/>

    </LinearLayout>
</RelativeLayout>